--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.data.mongodb.uri = mongodb+srv://root:root@cluster0.n57fhiu.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.uri = mongodb+srv://root:root@cluster0.n57fhiu.mongodb.net/sample-db?retryWrites=true&w=majority
