Created APIs for all except TrueFalse

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 debug=true
-spring.data.mongodb.uri = mongodb+srv://root:root@cluster0.n57fhiu.mongodb.net/sample-db?retryWrites=true&w=majority
+spring.data.mongodb.uri = mongodb+srv://root:root@cluster0.n57fhiu.mongodb.net/step-up?retryWrites=true&w=majority
